# snakepprepair

./: .gitignore  AssetPaths.h  CMakeLists.txt  Direction.h  Main.cpp  README.md  SnakePlusPlusPort.sln  SnakePlusPlusPort.vcxproj  SnakePlusPlusPort.vcxproj.filters  Specifications.h  resource.h
Debug/: vc141.idb
Debug/SnakePlu.81B6A178.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SnakePlusPlusPort.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SDL/: SDLBmp.cpp  SDLBmp.h  SDLError.cpp  SDLManager.cpp  SDLManager.h  SDLMusic.cpp  SDLMusic.h  SDLPng.cpp  SDLPng.h  SDLSound.cpp  SDLSound.h
board/: Node.cpp  Node.h
board/grid/: Vector2D.cpp  Vector2D.h
managers/: GameManager.cpp  GameManager.h  InputManager.cpp  RendererManager.cpp  RendererManager.h
renderers/: AppleRenderer.cpp  AppleRenderer.h  BackgroundRenderer.cpp  BackgroundRenderer.h  ObjectListRenderer.cpp  ObjectListRenderer.h  Renderer.cpp  Renderer.h  SnakeRenderer.cpp  SnakeRenderer.h
snake/: Snake.cpp  Snake.h
